# tensr

./: Cargo.toml  README.md
.github/workflows/: build.yaml  create-release.yaml
crates/tensr_proc_macros/: Cargo.toml  README.md
crates/tensr_proc_macros/src/: binary_op_gen.rs  function_gen.rs  lib.rs
scripts/: test-all.sh
src/: lib.rs  types.rs
src/array/: array.rs  array_base.rs  array_binary_ops.rs  array_traits.rs  base.rs  binary_ops.rs  function_2.rs  mod.rs  traits.rs  type_remap.rs
src/backend/: helper_macros.rs  mod.rs  op_traits.rs  traits.rs  types.rs
src/backend/host/: host_applicator.rs  host_backend.rs  host_function.rs  host_kernels.rs  host_ops.rs  host_storage.rs  mod.rs  storage.rs
src/dimension/: axes.rs  dim.rs  dyn_dim.rs  mod.rs  shape.rs  stride.rs
tests/: test.rs
tests/storage/: host.rs
