[package]
name = "tensr"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
tensr_proc_macros = { path = "crates/tensr_proc_macros" }
paste = "1.0"
rayon = "1.10.0"

[workspace]
members = ["crates/*"]

[dev-dependencies]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
debug = false
debug-assertions = false

[lints.clippy]

# Allow #[inline(always)] -- I have made the bold assumption that I know what I am doing
inline_always = { level = "allow", priority = 1 }

pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_docs = { level = "warn", priority = -2 }
