[package]
name = "tensr"
version = "0.1.0"
authors = ["Toby Davis <toby@tobydavis.dev>"]
description = "A high-performance, cross-platform, multi-backend tensor/array library for Rust"
homepage = "https://github.com/Pencilcaseman/tensr"
repository = "https://github.com/Pencilcaseman/tensr"
documentation = "https://docs.rs/tensr"
readme = "README.md"
keywords = ["array", "tensor", "multidimensional", "ndarray"]
categories = ["data-structures", "science", "concurrency"]
license = "MIT OR Apache-2.0"
edition = "2021"
exclude = [".github"]

[features]

[dependencies]
tensr_proc_macros = { path = "crates/tensr_proc_macros", version = "0.1.0" }
paste = "1.0"
rayon = "1.10.0"

[workspace]
members = ["crates/*"]

[dev-dependencies]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
debug = false
debug-assertions = false

[lints.clippy]

# Allow #[inline(always)] -- I have made the bold assumption that I know what I am doing
inline_always = { level = "allow", priority = 1 }

pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_docs = { level = "warn", priority = -2 }
