[package]
name = "tensr_proc_macros"
version = "0.1.0"
authors = ["Toby Davis <toby@tobydavis.dev>"]
description = "Procedural macros for the Tensr multidimensional array library"
homepage = "https://github.com/Pencilcaseman/tensr"
repository = "https://github.com/Pencilcaseman/tensr"
documentation = "https://docs.rs/tensr_proc_macros"
readme = "README.md"
keywords = ["array", "tensor", "multidimensional", "ndarray"]
categories = ["data-structures", "science", "concurrency"]
license = "MIT OR Apache-2.0"
edition = "2021"
exclude = [".github"]

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
prettyplease = "0.2.20"
proc-macro2 = "1.0.86"
itertools = "0.13.0"

[lib]
proc-macro = true
